fix legend z-index, add transition on restuarant UI box

--- a/index.css
+++ b/index.css
@@ -101,8 +101,9 @@ svg line {
   padding: 20px;
   font-family: "Quicksand", sans-serif;
   color: white;
-  background-color: black;
-  visibility: hidden;
+  background-color: rgb(15, 15, 15, 0.9);
+  opacity: 0;
+  transition: all 100ms ease-in;
 }
 
 #name {
@@ -138,7 +139,7 @@ svg line {
   padding: 20px;
   font-family: "Quicksand", sans-serif;
   color: white;
-  background-color: black;
+  background-color: rgb(15, 15, 15, 0.9);
   width: 400px;
   font-size: 15px;
 }
@@ -169,17 +170,22 @@ svg line {
   color: white;
 }
 
-
 #leg {
-  z-index: inherit;
+  z-index: -1;
   margin: 20px;
   padding: 10px;
   font-family: "Quicksand", sans-serif;
   color: white;
-  background-color: black;
+  background-color: rgb(15, 15, 15, 0.9);
   width: 120px;
   font-size: 15px;
   position: fixed;
   bottom: 2%;
   right: 0;
+}
+
+#info,
+#restaurant,
+#leg {
+  border-radius: 5px;
 }
